--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="action_settings">Settings</string>
     <string name="email">Email Id</string>
     <string name="passowrd">Password</string>
+    <string name="temporary_password">Temporary Password</string>
+    <string name="new_password">New Password</string>
     <string name="login">LOGIN</string>
     <string name="show_pwd">Show Password</string>
     <string name="hide_pwd">Hide Password</string>
@@ -20,7 +22,11 @@
     <string name="signUp">SIGN UP</string>
     <string name="already_user">Already have Account? Login here.</string>
     <string name="registered_emailid">Please enter your Registered Email Id below:</string>
+    <string name="new_password_hint">Please enter temporary password that you received in mail &amp; your new password below:</string>
     <string name="submit">SUBMIT</string>
-    <string name="back">BACK</string>
-
+    <string name="back">BACK</string>\
+    <string name="prog_msg_PROCESS">Logging In...</string>
+    <string name="prog_msg_SIGNUP">Signing In...</string>
+    <string name="prog_msg_SENDINGMAIL">Sending Mail...</string>
+    <string name="prog_msg_CHANGEPASSWORD">Changing Password...</string>
 </resources>
